tests: Simplify throughput test